# gridtv

./: .clang-tidy  .cppcheck-suppressions  .gitignore  CMakeLists.txt  DEVELOPING.md  README.md
.github/workflows/: build.yml
docs/: SETTINGS.md
harness/: gridtv_vlc.cpp
include/gridtv/: color.h  frame_processor.h  grid_device.h
include/gridtv/devices/: launchpad_classic.h  launchpad_mini_mk3.h  monome_128.h
install/: install.sh  windows.ps1
module_vlc/: gridtv_plugin.cpp  win_poll_shim.h
scripts/: _check_workflow.py  check-ci.sh  gridtv-vlc  install-plugin.sh
src/: frame_processor.cpp
src/devices/: launchpad_classic.cpp  launchpad_mini_mk3.cpp  monome_128.cpp
test/: device_test.cpp  interactive_probe.cpp  midi_probe.cpp  monome_mock.cpp  probe_dlopen.c
